# hs-skia

./: .gitignore  README.md  Setup.hs  flake.nix  package.yaml  skia-129-modified.nix  skia.cabal
assets/lottie-animations/: README.md
cbits/skia_capi/: sk_general.h  sk_types.h  skparagraph.h
cbits/src/: common_include_pch.hpp  gr_context.cpp  sk_enums.cpp  sk_general.cpp  sk_image.cpp  sk_path.cpp  sk_structs.cpp  sk_types_priv.h  sk_types_priv.hpp  skottie_animation.cpp  skparagraph.cpp
cbits_cmake/: CMakeLists.txt
demos/: DemoGLFWOpenGL.hs  DemoListSKUnicodeBackends.hs  DemoRasterExample.hs  DemoRasterExampleBindingsOnly.hs  DemoSDL2OpenGL.hs  DemoSKParagraph.hs  DemoSkottieAnimationViewer.hs
demos/SharedUtils/: MakeDemoApp.hs
scripts/: start_cli.py
scripts/cli_utils/: gen_bindings.py  misc.py
src/Skia/: Bindings.hs  Color.hs  ColorMatrix.hs  Core.hs  Enums.hs  Errors.hs  GRBackendRenderTarget.hs  GRDirectContext.hs  GRGlInterface.hs  GrBackendRenderTarget.hs  GrContextOptions.hs  GrDirectContext.hs  GrGLInterface.hs  GrGLTypes.hs  GrTypes.hs  Linear.hs  Objects.hs  Rect.hs  SKCanvas.hs  SKColorSpace.hs  SKColorType.hs  SKData.hs  SKFileStream.hs  SKFileWStream.hs  SKFont.hs  SKFontManager.hs  SKFontStyle.hs  SKImage.hs  SKImageEncoder.hs  SKImageInfo.hs  SKMemoryStream.hs  SKPaint.hs  SKPath.hs  SKPathEffect.hs  SKPixmap.hs  SKRRect.hs  SKRefCnt.hs  SKRegion.hs  SKSamplingOptions.hs  SKShader.hs  (+43 more)
src/Skia/Bindings/: Gr_context.hs  Sk_bitmap.hs  Sk_blender.hs  Sk_canvas.hs  Sk_codec.hs  Sk_color.hs  Sk_colorfilter.hs  Sk_colorspace.hs  Sk_data.hs  Sk_document.hs  Sk_drawable.hs  Sk_font.hs  Sk_fontmgr.hs  Sk_general.hs  Sk_graphics.hs  Sk_image.hs  Sk_imagefilter.hs  Sk_maskfilter.hs  Sk_matrix.hs  Sk_paint.hs  Sk_path.hs  Sk_patheffect.hs  Sk_picture.hs  Sk_pixmap.hs  Sk_region.hs  Sk_rrect.hs  Sk_runtimeeffect.hs  Sk_shader.hs  Sk_stream.hs  Sk_string.hs  Sk_surface.hs  Sk_svg.hs  Sk_textblob.hs  Sk_typeface.hs  Sk_vertices.hs  Skottie_animation.hs  Skparagraph.hs  Skresources_resource_provider.hs  Sksg_invalidation_controller.hs  Sksvg.hs  (+2 more)
src/Skia/Internal/: CoreUtils.hs  Prelude.hs  RawEnums.hs  THUtils.hs  TypeLevelBool.hs  Utils.hs
src/Skia/SKParagraph/: Enums.hs  FontCollection.hs  (+8 more)
(+25 files in other folders)
